--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "bucket-list-app/backend",
+	"name": "bucket-list-appbackend",
 	"version": "1.0.0",
 	"description": "(Back end)An app for keeping track of all your bucket list goals",
 	"main": "index.js",
@@ -24,11 +24,11 @@
 		"helmet": "^3.20.0",
 		"jsonwebtoken": "^8.5.1",
 		"knex": "^0.19.2",
+		"nodemon": "^1.19.2",
 		"sqlite3": "^4.1.0"
 	},
 	"devDependencies": {
 		"jest": "^24.9.0",
-		"nodemon": "^1.19.1",
 		"supertest": "^4.0.2"
 	},
 	"jest": {
