--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
 	"homepage": "https://github.com/bucket-list-app/backend",
 	"dependencies": {
 		"axios": "^0.19.0",
-		"bcrypt": "^3.0.6",
+		"bcryptjs": "^2.4.3",
+		"connect-session-knex": "^1.4.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"express-session": "^1.16.2",
 		"helmet": "^3.20.0",
 		"jsonwebtoken": "^8.5.1",
 		"knex": "^0.19.2",
 		"nodemon": "^1.19.2",
+		"sqlite": "^3.0.3",
 		"sqlite3": "^4.1.0"
 	},
 	"devDependencies": {
