--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-session": "^1.16.2",
+		"global": "^4.4.0",
 		"helmet": "^3.20.0",
+		"heroku": "^7.29.0",
 		"jsonwebtoken": "^8.5.1",
 		"knex": "^0.19.2",
 		"nodemon": "^1.19.2",
